templates/environment/services/cli-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cli-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cli
  template:
    metadata:
      labels:
        app: cli
    spec:
      containers:
        - image: bedrockio/tectonic-cli
          imagePullPolicy: Always
          name: cli
          volumeMounts:
            - name: cli-cache
              mountPath: /workdir/data
      volumes:
        - name: cli-cache
          emptyDir: {}
