templates/environment/services/elasticsearch-sink-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-sink-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-sink
  template:
    metadata:
      labels:
        app: elasticsearch-sink
    spec:
      containers:
        - image: bedrockio/tectonic-elasticsearch-sink
          imagePullPolicy: Always
          name: elasticsearch-sink
          volumeMounts:
            - name: cache
              mountPath: /workdir/data
      volumes:
        - name: cache
          emptyDir: {}
