templates/environment/services/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: bedrockio/tectonic-web
          imagePullPolicy: Always
          name: main
          ports:
            - name: http-server
              containerPort: 3200
