templates/environment/services/tectonic-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tectonic-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tectonic-api-ingress
spec:
  defaultBackend:
    service:
      name: api-nodeport
      port:
        number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  labels:
    name: api-nodeport
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3300
      protocol: TCP
