templates/environment/services/tectonic-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tectonic-web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tectonic-web-ingress
spec:
  defaultBackend:
    service:
      name: web
      port:
        number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3200
      protocol: TCP
